@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2011-09-29 16:17
+// This file was generated on 2011-10-04 12:25
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = t3lib_extMgm::extPath('ics_libnavitia') . 'Classes/';
@@ -18,6 +18,7 @@ return array(
 	'tx_icslibnavitia_entrypointplanjourney' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_EntryPointPlanJourney.php',
 	'tx_icslibnavitia_forward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Forward.php',
 	'tx_icslibnavitia_hang' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Hang.php',
+	'tx_icslibnavitia_hanglist' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_HangList.php',
 	'tx_icslibnavitia_journeyresult' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_JourneyResult.php',
 	'tx_icslibnavitia_line' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Line.php',
 	'tx_icslibnavitia_mode' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Mode.php',
